# GitIt

./: .coverage.eddie.35944.XmEjtvdx  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  Dockerfile  InstallDevEnv.ps1  LICENSE.txt  MANIFEST.in  README.md  README.rst  ReleaseNotes.md  SetUpDocker.ps1  SetupDotEnv.ps1  SetupGitHubAccess.ps1  SetupPrivateRepoAccess.ps1  docker-compose.yaml  docker-pytest.bat  docker-rebuild.bat  install.ps1  install.sh  pyproject.1.toml  pyproject.toml  requirements.txt  requirements_test.txt  setup.1.cfg  setup.cfg  xsetup.py
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug.md  bugfix.md  enhancement.md  feature.md  hotfix.md  release.md
.github/workflows/: 00-deployment-pipeline.yaml  01-pre-commit-and-document-check.yaml  03-ci.yaml  04-build-and-deploy-to-production.yaml  build-and-release-to-pypi.yml  check-rst-documentation.yml  ci.yaml  ci.yml  pre-commit.yaml  pre-commit.yml  py-temp-pypi-pub_no_docker-def.yaml  py-temp-pypi-pub_with_docker-def.yaml  pypi-pipeline.yml  release.yml
.packageit/: packageit.ini  release.toml
docs/source/: api.rst  conf.py  conventions.rst  examples.rst  faq.rst  index.rst
src/: config.py  main.py  set_env.py
src/add/: adda.py
src/gitit/: README_body.rst  __init__.py  __main__.py  config.py  gitit.py  main.py
src/gitit/add/: add.py  adda.py
src/gitit/branch/: branch.py
src/gitit/commit/: commit.py
src/gitit/push/: push.py
src/gitit/setenv/: setenv.py
src/gitit/tag/: tag.py
tests/: conftest.py  dirk.py  test_config.py  test_gitit.py
