[metadata]
name = gitit
version = 0.0.1
author = Hendrik du Toit
author_email = hendrik@brightedge.co.za
description = Insert project description here
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 1 - Planning
	Intended Audience :: Developers
	Topic :: Software Development
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.0
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
install_requires = 
	beetools
	configparserext
	releaselogit
	semverit
	termcolor
	toml
setup_requires = 
	beetools
	configparserext
	releaselogit
	semverit
	termcolor
	toml
tests_require = 
	pip
	wheel
	beetools
	black
	configparserext
	gitignore_parser
	gitpython
	pre-commit
	pygithub
	pytest
	pytest-cov
	releaselogit
	requests
	semverit
	sphinx
	sphinx-autobuild
	sphinx-rtd-theme
	termcolor
	toml
	twine
	build
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src

[flake8]
exclude = __init__.py, VersionArchive/, Archive/
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[tool:pytest]
addopts_p = --doctest-modules --cov=tests --cov=packageit --ignore-glob=*\VersionArchive --ignore-glob=*\Archive --ignore-glob=*\Templates --cov-report=html
addopts = --ignore-glob=*\VersionArchive --ignore-glob=*\Archive  --cov-report=html

